apps/tools/changedetection/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: tools
spec:
  selector:
    app: "changedetection"
  ports:
  - name: webui
    protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
